* Remaining time: replace function KIO::calculateRemaining() with KIO::calculateRemainingSeconds() and KIO::convertSeconds(). So the time can be more than "23:59:59" (now for example "2 days 12:12:12").

BUG: 105770
CCBUG: 85190

* Better formatted systray tooltip.

svn path=/trunk/KDE/kdenetwork/kget/; revision=437888